# python-aidot-cameras

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  MANIFEST.in  README.md  cleanup-branches.sh  plan.md  pyproject.toml  setup.py  test_camera.py
.github/: dependabot.yml
.github/workflows/: Hassio.yml  ci.yml  publish.yml  pylint.yml  pysa.yml  python-app.yml
aidot/: __init__.py  __main__.py  aes_utils.py  auth_cache.py  client.py  const.py  credentials.py  device_client.py  discover.py  exceptions.py  main.544c2d18.js  webrtc_integration_patch.md
aidot/_vendor/: __init__.py
aidot/camera/: __init__.py  client.py  go2rtc.py  lan_control.py  playback.py  protocol.py  sdes.py  sdes_open.py  webrtc_open.py
aidot/models/: device_client_model.py
docs/: 2026-06-25-coldstart-forward-port-audit.md  CAMERAS.md  DEFERRED_FEATURES.md  UPSTREAM-SYNC.md  lan-control-plan.md  official_camera_network_calls.md
docs/superpowers/plans/: 2026-06-25-aidot-coldstart-optimization.md
docs/superpowers/specs/: 2026-06-25-aidot-coldstart-design.md  2026-06-25-coldstart-forward-port-audit.md
fauxbackend/: .gitignore  DEPLOY.md  Dockerfile  README.md  adguard-rewrites.md  app.py  config.example.env  devices.json.example  docker-compose.yml  endpoints.md  integration_test.py  mqtt_responder.py  requirements.txt  run_integration.sh  smoke_test.py  validate_live.sh
fauxbackend/certs/: gen_certs.sh
fauxbackend/coturn/: turnserver.conf
fauxbackend/mosquitto/: aidot-wss.conf  mosquitto.conf
scripts/: audio_mux_probe.py  camera_capture.sh  camera_capture_analyze.py  camera_diag.py  cleanup-branches.sh  go2rtc_serve.py  ice_path_report.py  sdes_soak_monitor.py  sdes_validate.py  smoke_stream.py
sources/androidx/activity/: ActivityViewModelLazyKt$viewModels$1.java  ActivityViewModelLazyKt$viewModels$factoryPromise$1.java  ActivityViewModelLazyKt.java  Api19Impl.java  Api26Impl.java  ComponentActivity.java  ImmLeaksCleaner.java  OnBackPressedDispatcher.java  OnBackPressedDispatcherKt$addCallback$callback$1.java  OnBackPressedDispatcherKt.java  PipHintTrackerKt$trackPipAnimationHintView$$inlined$collect$1.java  PipHintTrackerKt$trackPipAnimationHintView$flow$1$attachStateChangeListener$1.java  PipHintTrackerKt$trackPipAnimationHintView$flow$1$layoutChangeListener$1.java  PipHintTrackerKt$trackPipAnimationHintView$flow$1$scrollChangeListener$1.java  PipHintTrackerKt$trackPipAnimationHintView$flow$1.java  PipHintTrackerKt.java  R.java  a.java  b.java
sources/androidx/annotation/: AnimRes.java  AnimatorRes.java  AnyRes.java  AnyThread.java  ArrayRes.java  AttrRes.java  BinderThread.java  BoolRes.java  CallSuper.java  CheckResult.java  ChecksSdkIntAtLeast.java  ColorInt.java  ColorLong.java  ColorRes.java  ContentView.java  DeprecatedSinceApi.java  DimenRes.java  Dimension.java  Discouraged.java  DisplayContext.java  DoNotInline.java  DrawableRes.java  EmptySuper.java  FloatRange.java  FontRes.java  FractionRes.java  GravityInt.java  GuardedBy.java  HalfFloat.java  IdRes.java  InspectableProperty.java  IntDef.java  IntRange.java  (+32 more)
sources/coil/: a.java  b.java  c.java  d.java  e.java  f.java
sources/defpackage/: a.java
sources/demo/: DevListAdapter.java  MatterListActivity.java  MtCodeTestAct.java  ProvisionActivity.java  a.java  b.java  c.java  d.java  e.java  f.java  g.java  h.java  i.java
sources/kotlin/: KotlinNothingValueException.java  KotlinNullPointerException.java  NoWhenBranchMatchedException.java  TypeCastException.java  UninitializedPropertyAccessException.java  a.java  b.java  d.java  e.java  f.java  g.java  h.java  i.java  j.java  k.java  l.java  m.java  n.java  o.java  p.java  q.java  r.java  s.java  t.java  u.java  v.java  w.java  x.java  y.java  z.java
sources/meshsdk/: BaseResp.java  Cache.java  ConfigUtil.java  MeshEventHandler.java  MeshLog.java  MeshLogNew.java  MeshScanLog.java  SIGMesh.java  UpdateRetryStrategy.java
sources/okhttp3/: a.java  a0.java  b.java  b0.java  c.java  c0.java  d.java  d0.java  e.java  e0.java  f.java  f0.java  g.java  g0.java  h.java  h0.java  i.java  i0.java  j.java  k.java  l.java  m.java  n.java  o.java  p.java  q.java  r.java  s.java  t.java  u.java  v.java  w.java  x.java  y.java  z.java
sources/okio/: a.java  a0.java  b.java  b0.java  c.java  c0.java  d.java  d0.java  e.java  e0.java  f.java  f0.java  g.java  g0.java  h.java  h0.java  i.java  i0.java  j.java  k.java  l.java  m.java  n.java  o.java  p.java  q.java  r.java  s.java  t.java  u.java  v.java  w.java  x.java  y.java  z.java
sources/retrofit2/: HttpException.java  a.java  b.java  c.java  d.java  e.java  f.java  g.java  h.java  i.java  j.java  k.java  l.java  m.java  n.java  o.java  p.java  q.java  r.java  s.java  t.java  u.java  v.java  w.java  x.java
src/aidot/: __init__.py  aes_utils.py  client.py  const.py  credentials.py  device_client.py  discover.py  exceptions.py
src/aidot_cameras/: __main__.py  client.py  const.py  credentials.py  g711.py  login_const.py
tests/: test_aioice_compat.py  test_alarm_event.py  test_await_listen_bound.py  test_backoff.py  test_deferred_hardening.py  test_device_login_guard.py  test_device_user_info_cache.py  test_dtls_not_ready_burst.py  test_dtls_pinning.py  test_dtls_serve_decode_skip.py  test_dtls_serve_open_timeout.py  test_dtls_skip_signaling_wait.py  test_dtls_slow_probe.py  test_egress_guard.py  test_go2rtc.py  test_go2rtc_cli.py  test_h264_decode_rate_limit.py  test_highport_nomination.py  test_ice_config_cache.py  test_ice_server_selection.py  test_keepalive_renew.py  test_keyframe_prompter.py  test_lan_control.py  test_light_active_color_mode.py  test_live_stream_param.py  test_logging_caps.py  test_motion_poll.py  test_mqtt_session_reconnect.py  test_narrow_pc_ice.py  test_no_undefined_names.py  test_offline_keepalive_pause.py  test_open_fail_logger.py  test_open_gate_delay.py  test_persistent_mqtt.py  test_persistent_mqtt_robustness.py  test_playback_tls.py  test_post_merge_hardening.py  test_retry_policy.py  test_sdes_adaptive.py  test_sdes_bridge_break_gate.py  (+25 more)
tools/: extract_aidot_signaling.py
(+19888 files in other folders)
