[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "python-aidot-cameras"
version = "0.11.4"
description = "Control AiDot/Leedarson WiFi lights and cameras (WebRTC streaming, two-way audio, PTZ, controls)"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "cbrightly", email = "chris.brightly@gmail.com" }]
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
# Conservative lower bounds only - no upper caps. When installed under Home
# Assistant, HA core pins aiohttp/cryptography itself; an upper cap here would
# fight HA's resolver on the box. Floors just exclude ancient releases while
# leaving the consumer (or HA) free to use a newer version. Bump a floor only
# after re-validating against it.
dependencies = [
    "aiohttp>=3.9",
    "paho-mqtt>=1.6.1",
    "cryptography>=42.0",
    "pycryptodome>=3.20",
    "dacite>=1.8",
]

[project.optional-dependencies]
webrtc = [
    # Streaming uses aiortc, VENDORED at aidot/_vendor/aiortc (byte-identical to
    # aiortc 1.14.0, only vendored so Home Assistant 2026.7's pinned av==17 is
    # satisfiable - stock aiortc caps av<17, which makes [webrtc] uninstallable
    # there). These are aiortc's own runtime deps; the PyAV ceiling is widened to
    # <18 (av 17 verified compatible: import + H.264 encode round-trip). Drop the
    # vendor and depend on stock aiortc again once upstream widens the pin.
    "av>=14.0.0,<18.0.0",
    # aioice stays external: we monkeypatch its private internals
    # (Connection.build_request / _check_list / _nominated) for the A000088
    # high-port nomination fix and read them for stream diagnostics. Pin the
    # tested range (>=0.10.1 is aiortc's floor) so a surprise bump that reshapes
    # those internals is caught at install/CI (test_aioice_compat.py).
    "aioice>=0.10.1,<0.12",
    "pylibsrtp>=0.10.0",
    "pyopenssl>=25.0.0",
    "cryptography>=44.0.0",
    "pyee>=13.0.0",
    "google-crc32c>=1.1",
    "numpy",
    "Pillow",
]

[project.scripts]
# Standalone bridge: stream an AiDot camera into go2rtc (or any RTSP/HTTP
# consumer) without Home Assistant. Streaming needs the `webrtc` extra
# (aiortc et al.); `--list` works with the core deps alone.
aidot-go2rtc = "aidot.__main__:main"

[project.urls]
Homepage = "https://github.com/cbrightly/python-aidot-cameras"
"Issue Tracker" = "https://github.com/cbrightly/python-aidot-cameras/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["aidot*"]

[tool.setuptools.package-data]
aidot = ["py.typed"]

[tool.coverage.run]
# Vendored third-party code (aiortc) is exercised via streaming, not our tests;
# keep it out of the coverage report so the numbers reflect our own code.
omit = ["aidot/_vendor/*"]

[tool.ruff]
target-version = "py311"
line-length = 88
# Vendored third-party code (aiortc) is shipped byte-identical; never lint/format it.
extend-exclude = ["aidot/_vendor"]

[tool.ruff.lint]
# High-signal rules only; opinionated style (quotes, trailing commas, missing
# annotations/docstrings, magic values) is intentionally left to the formatter.
select = ["F", "E4", "E7", "E9", "W", "B", "ASYNC", "RUF", "UP", "SIM", "PIE", "RET", "PERF"]
ignore = [
    "E501",                                  # line length: formatter's job
    "E701", "E741",                          # multiple-statements / ambiguous name: cosmetic
    "UP035", "UP006", "UP007", "UP045", "UP037", "UP031",  # typing/format style (keep broad compat)
    "E702",                                  # multiple-statements (semicolon): cosmetic
    "SIM102", "SIM103", "SIM105", "SIM108", "SIM117",  # collapsible/ternary/suppress/nested: stylistic
    "ASYNC109", "ASYNC240",                  # timeout-param design; os.path.join is non-blocking
    "RET504", "RET505", "RET506",            # return-style: stylistic
    "PERF203", "PERF401",                    # try/except in loop, manual comprehension: stylistic
    "PIE810",                                # multiple startswith/endswith: stylistic
    "RUF001", "RUF003", "RUF059",            # ambiguous-unicode (intentional x), unused-unpacked: cosmetic
    "B904",                                  # raise-without-from: traceback-chaining style (not enforced)
    "B008",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B", "RUF", "SIM", "PERF", "ASYNC", "F811", "PIE", "E731", "E702"]
# Re-export modules: imports are intentional public re-exports / back-compat shims.
"__init__.py" = ["F401"]
# device_client.py re-exports from camera.client mid-file (avoids a circular import).
"**/device_client.py" = ["F401", "E402"]
# Inherited ffmpeg streaming engine is process-based (Popen / subprocess poll /
# SDP file write); a full non-blocking refactor needs on-device testing. The
# engine is split across several camera/* modules, so this applies package-wide.
"aidot/camera/*.py" = ["ASYNC110", "ASYNC220", "ASYNC221", "ASYNC230"]
